--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,7 +20,7 @@ body, html {
   /* Add position: relative to enable absolutely positioned elements inside the image (place text) */
   position: relative;
   /* Add a white text color to all elements inside the .bgimg container */
-  color: white;
+  color: rgb(255, 255, 255);
   /* Add a font */
   /* Set the font-size to 25 pixels */
   font-size: 25px;
@@ -65,14 +65,14 @@ hr {
 
 .bg-layout {
   width: 100%;
-  background-color: rgba(52, 81, 96, 0.9);
+  background-color: rgba(17, 61, 193, 0.9);
   display: block;
   min-height: 100vh;
   height: 100%;
 }
 
 .h1 {
-  color: #DDD;
+  color: rgb(250, 248, 248);
   font-size: 48px;
   /* margin: 20px 0; */
   font-weight: bold;
